RESOLVED FIXED209867
Web Inspector: Storage: cannot clear out multiple or all local storage entries
https://bugs.webkit.org/show_bug.cgi?id=209867
Summary Web Inspector: Storage: cannot clear out multiple or all local storage entries
Jon Lee
Reported 2020-04-01 11:18:30 PDT
I'd like to be able to delete multiple key/values pairs in local storage in WI. This breaks down to a few requests: - Allow selection of multiple rows - Command-A to select all rows - A button to clear all local storage - Right click on "Local Storage" in the left sidebar with option to "Clear All Items"
Attachments
Patch (35.72 KB, patch)
2020-04-05 20:22 PDT, Devin Rousso
no flags
Jon Lee
Comment 1 2020-04-01 11:22:54 PDT
Also, if I select a row, and then press delete, it doesn't by default select the next row. So I can't mash the delete key to remove a series of key/value pairs, either.
Jon Lee
Comment 2 2020-04-01 11:24:05 PDT
A good place to test this is to load https://browserbench.org/MotionMark/developer.html and press "Run benchmark". That will set entries.
Devin Rousso
Comment 3 2020-04-01 13:04:31 PDT
(In reply to Jon Lee from comment #0) > - Allow selection of multiple rows > - Command-A to select all rows These both should be solved if we switch from `WI.DataGrid` to `WI.Table`. We'd need to either add logic to `WI.Table` to support editing by default, or add custom logic to `WI.DOMStorageContentView` for editing. > - A button to clear all local storage > - Right click on "Local Storage" in the left sidebar with option to "Clear All Items" We could do this with a new protocol command (i.e. `DOMStorage.clearDOMStorageItems` like `IndexedDB.clearObjectStore`), but we could also do this by successively calling `DOMStorage.removeDOMStorageItem` with each item. This would be a lot of protocol traffic, but it would be backwards compatible. We may want to extend many of these to `IndexedDB` as well :)
Devin Rousso
Comment 4 2020-04-05 20:22:36 PDT
EWS Watchlist
Comment 5 2020-04-05 20:23:27 PDT
This patch modifies the inspector protocol. Please ensure that any frontend changes appropriately use feature checks for new protocol features.
EWS
Comment 6 2020-04-08 12:16:39 PDT
Committed r259744: <https://trac.webkit.org/changeset/259744> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395542 [details].
Radar WebKit Bug Importer
Comment 7 2020-04-08 12:17:14 PDT
Jon Lee
Comment 8 2020-04-22 14:50:02 PDT
(In reply to Devin Rousso from comment #3) > (In reply to Jon Lee from comment #0) > > - Allow selection of multiple rows > > - Command-A to select all rows > These both should be solved if we switch from `WI.DataGrid` to `WI.Table`. > We'd need to either add logic to `WI.Table` to support editing by default, > or add custom logic to `WI.DOMStorageContentView` for editing. These still haven't been addressed. Will split off another bug and relate.
Note You need to log in before you can comment on or make changes to this bug.