Source/WebInspectorUI/UserInterface/Views/DOMStorageContentView.js
@@ -55,6 +55,11 @@ WI.DOMStorageContentView = class DOMStorageContentView extends WI.ContentView
         this._filterBarNavigationItem = new WI.FilterBarNavigationItem;
         this._filterBarNavigationItem.filterBar.addEventListener(WI.FilterBar.Event.FilterDidChange, this._handleFilterBarFilterDidChange, this);
 
+        let clearButtonLabel = representedObject.isLocalStorage() ? WI.UIString("Clear Local Storage") : WI.UIString("Clear Session Storage");
+        this._clearButtonNavigationItem = new WI.ButtonNavigationItem("dom-storage-clear", clearButtonLabel, "Images/NavigationItemTrash.svg", 15, 15);
+        this._clearButtonNavigationItem.visibilityPriority = WI.NavigationItem.VisibilityPriority.Low;
+        this._clearButtonNavigationItem.addEventListener(WI.ButtonNavigationItem.Event.Clicked, this._handleClearNavigationItemClicked, this);
+
         this._populate();
     }
 
@@ -62,7 +67,11 @@ WI.DOMStorageContentView = class DOMStorageContentView extends WI.ContentView
 
     get navigationItems()
     {
-        return [this._filterBarNavigationItem];
+        return [
+            this._filterBarNavigationItem,
+            new WI.DividerNavigationItem,
+            this._clearButtonNavigationItem,
+        ];
     }
 
     saveToCookie(cookie)
@@ -289,6 +298,11 @@ WI.DOMStorageContentView = class DOMStorageContentView extends WI.ContentView
     _handleFilterBarFilterDidChange(event)
     {
         this._dataGrid.filterText = this._filterBarNavigationItem.filterBar.filters.text || "";
+    }
+
+    _handleClearNavigationItemClicked(event)
+    {
+        this.representedObject.clear();
     }
 };
 
